# deepl-document-translator-for-slack

./: .gitignore  LICENSE.txt  app-manifest.yml  app.json  app.py  languages.py  pyproject.toml  readme.md  requirements.txt
