[tool.poetry]
name = "deepl-document-translator-for-slack"
version = "0.1.0"
description = "An app that translates Slack docuemnts by leveraging DeepL API"
authors = ["Kazuhiro Sera <seratch@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
deepl = "^1.5.0"
slack-bolt = "^1.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
